--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <!-- // for the next step -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
